plugins {
	id 'java'
	id "com.diffplug.spotless" version '7.2.1'
	id 'org.springframework.boot' version '3.5.4'
	id 'io.spring.dependency-management' version '1.1.7'

}

group = 'com.spring'
version = '0.0.1-SNAPSHOT'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(21)
	}
}

spotless {
	java {
		target 'src/**/*.java'
		googleJavaFormat()
        removeUnusedImports()
	}
}

compileJava {
	dependsOn tasks.spotlessApply
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}

ext {
    commonsLangVersion = '3.18.0'
    jsonwebtokenVersion = '0.13.0'
    dropboxVersion = '7.0.0'
}

dependencies {
    // web
    implementation 'org.springframework.boot:spring-boot-starter-web'

    // data
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    runtimeOnly 'com.mysql:mysql-connector-j'

    // security
    implementation 'org.springframework.boot:spring-boot-starter-security'
    implementation "io.jsonwebtoken:jjwt-api:${jsonwebtokenVersion}"
    runtimeOnly "io.jsonwebtoken:jjwt-impl:${jsonwebtokenVersion}"
    runtimeOnly "io.jsonwebtoken:jjwt-jackson:${jsonwebtokenVersion}"

    // lombok
	compileOnly 'org.projectlombok:lombok'
    annotationProcessor 'org.projectlombok:lombok'

    // utils
    implementation "org.apache.commons:commons-lang3:${commonsLangVersion}"

    // swagger
    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.8.13'

    // s3
    implementation 'software.amazon.awssdk:s3:2.37.2'

    // validation
    implementation 'org.springframework.boot:spring-boot-starter-validation'

    // test
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
}

tasks.named('test') {
	useJUnitPlatform()
}
